changement de couleur du grand titre

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 
 <body style="background-color:#00FFFF">
-<h1 style="padding-top:20%; padding-bottom:20%; text-align:center;">Location de voiture anciennes</h1>
+<h1 style="padding-top:20%; padding-bottom:20%; text-align:center; color:#FF0000">Location de voiture anciennes</h1>
 </body>
 </html>
