--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Document sans nom</title>
 </head>
 
-<body style="background-color:#00FFFF">
+<body style="background-color:#FFFF00">
 <h1 style="padding-top:20%; padding-bottom:20%; text-align:center; color:#FF0000">Location de voiture anciennes</h1>
 </body>
 </html>
